--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hw-01",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://goitacademy.github.io/react-homework-template/",
+  "homepage":"https://anastasiariabova.github.io/goit-react-woolf-hw-01-components/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
